--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,2 +1,2 @@
 <h1> <font size ="+2"> <%= @team.name %> </h1>
-<h1> <font size ="+2"> <%= @team["motto"] %> </h1>
+<h1> <font size ="+2"> <%= @team.motto %> </h1>
