Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,4 @@
 <h1> <font size ="+2"> <%= @team.name %> </h1>
 <h1> <font size ="+2"> Team Motto <%= @team.motto %> </h1>
 <h1> <font size ="+2"> Hero Power: <%= @amanda["power"] %> </h1>
-<h1> <font size ="+2"> Hero Biography: <%= @amanda["biography"] %> </h1>
+<h1> <font size ="+2"> Hero Biography: <%= @amanda["bio"] %> </h1>
