--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,6 +5,6 @@
 <h1> <font size ="+2"> Hero Power: <%= @amanda["power"] %> </h1>
 <h1> <font size ="+2"> Hero Biography: <%= @amanda["bio"] %> </h1>
 
-<h1> <font size ="+2"> Hero Name: <%= @amanda["name"] %> </h1>
-<h1> <font size ="+2"> Hero Power: <%= @amanda["power"] %> </h1>
-<h1> <font size ="+2"> Hero Biography: <%= @amanda["bio"] %> </h1>
+<h1> <font size ="+2"> Hero Name: <%= @arel["name"] %> </h1>
+<h1> <font size ="+2"> Hero Power: <%= @arel["power"] %> </h1>
+<h1> <font size ="+2"> Hero Biography: <%= @arel["bio"] %> </h1>
