--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,3 +8,7 @@
 <h1> <font size ="+2"> Hero Name: <%= @arel["name"] %> </h1>
 <h1> <font size ="+2"> Hero Power: <%= @arel["power"] %> </h1>
 <h1> <font size ="+2"> Hero Biography: <%= @arel["bio"] %> </h1>
+
+<h1> <font size ="+2"> Hero Name: <%= @katie["name"] %> </h1>
+<h1> <font size ="+2"> Hero Power: <%= @katie["power"] %> </h1>
+<h1> <font size ="+2"> Hero Biography: <%= @katie["bio"] %> </h1>
